Fix jumping effect in shell pager

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -1438,10 +1438,12 @@ StScrollBar {
     background-color: rgba(255, 255, 255, 0.3); }
   .page-indicator:hover .page-indicator-icon {
     background-image: none;
-    background-color: rgba(211, 78, 78, 0.5); }
+    background-color: rgba(255, 255, 255, 0.5); }
   .page-indicator:active .page-indicator-icon {
     background-image: none;
-    background-color: rgba(255, 255, 255, 0.7); }
+    background-color: rgba(255, 255, 255, 0.7);
+    border-width: 2px;
+    margin: 0; }
   .page-indicator:checked .page-indicator-icon {
     background-image: none;
     background-color: #FFFFFF;
